fix: line-height-baseを修正し、about-meセクションのletter-spacingを追加

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -53,9 +53,11 @@ $tokens-typography: (
     /* copy right */
     font-size-copy-right: 0.938rem,
     /* line height */
-    line-height-base: 1.6,
+    line-height-base: 2,
     line-height-tight: 1.3,
     title-line-height: 1,
+    /* letter-spacing */
+    about-me-letter-spacing: 0.05rem,
 
     /*----- sp -----*/
     // 65px
